--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -12,22 +12,15 @@
     </head>
 
     <body>
-        <section id="menu" class="ocultar">
-            <div id="menuAbierto">
-                <img class="ImgMenu" id="menuAzulAbierto" src="img/menuAzulAbierto.png" alt="Menu" >
-                <h1 id="MenuTitle">Menú</h1>
-            </div>            
+        <section id="Seccarga" >                     
         </section>
-        <section id="listaPrueba">
-            <img class="ImgMenu" id="menuAzul" src="img/menuAzul.png" alt="Menu" >
-            <ul id="listaPrueba" class="animated fadeInLeft">
-                <li id="1">Ir al gimnasio</li>
-                <li id="2">Lavarse los dientes</li>
-                <li id="3">Tomar fotografias</li>
-                <li id="4">Comprar el mercado</li>
-                <li id="5">Leer un libro</li>
-                <li id="6">Organizar la oficina</li>
-            </ul>
+        <section id="Secbienvenidos" >                     
+        </section>
+        <section id="SecUnidad" class="ocultar">            
+        </section>
+        <section id="SecEnfoque" class="ocultar">            
+        </section>
+        <section id="SecPruebas" class="ocultar">            
         </section>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
