cambiar id por class

--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -12,15 +12,15 @@
     </head>
 
     <body>
-        <section id="Seccarga" >                     
+        <section class="Seccarga" >                     
         </section>
-        <section id="Secbienvenidos" >                     
+        <section class="Secbienvenidos ocultar" >                     
         </section>
-        <section id="SecUnidad" class="ocultar">            
+        <section class="SecUnidad ocultar">            
         </section>
-        <section id="SecEnfoque" class="ocultar">            
+        <section class="SecEnfoque ocultar">            
         </section>
-        <section id="SecPruebas" class="ocultar">            
+        <section class="SecPruebas ocultar">            
         </section>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
