Lista Pantalla de Carga
Tambien se hizo la comunicacion con la siguiente pantalla de bienvenidos

--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -12,18 +12,18 @@
     </head>
 
     <body>
-        <section class="Seccarga animated fadeInUpBig" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>         
                       
         </section>
-        <section class="Secbienvenidos ocultar" >                     
+        <section id="Secbienvenidos" class="Secbienvenidos ocultar" >                     
         </section>
-        <section class="SecUnidad ocultar">            
+        <section id="SecUnidad" class="SecUnidad ocultar">            
         </section>
-        <section class="SecEnfoque ocultar">            
+        <section id="SecEnfoque" class="SecEnfoque ocultar">            
         </section>
-        <section class="SecPruebas ocultar">            
+        <section id="SecPruebas" class="SecPruebas ocultar">            
         </section>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
