--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Be Prepared</title>
 
 <body>
@@ -12,7 +13,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
+        <section id="Seccarga" class="Seccarga  ocultar" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>         
                       
@@ -23,7 +24,26 @@
         </section>
         <section id="SecEnfoque" class="SecEnfoque ocultar">            
         </section>
-        <section id="SecPruebas" class="SecPruebas ocultar">            
+        <section id="SecPruebas" class="SecPruebas animated fadeInLeftBig"> 
+            <div id="infoUsuario">
+                <div id="headInfoUsuario">
+                    <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
+                    <img id="menuPruebas" src="img/pantallas/pruebas/imagenes/menu.png">
+                    Sofía Álvarez
+                    <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png">
+                </div>
+                <div id="bodyInfoUsuario">
+                    <img id="usuarioPruebas" src="img/pantallas/pruebas/imagenes/ella_azul.png">
+                    <p id="nivelPruebas">Nivel 1</p>
+                    <img id="saludPruebas" src="img/pantallas/pruebas/imagenes/salud.png">
+                    <img id="barraSaludPruebas" src="img/todas/barra.png">
+                    <p id="pSaludPruebas">Salud</p>
+                    <img id="experienciaPruebas" src="img/pantallas/pruebas/imagenes/experiencia.png">
+                    <img id="barraExpPruebas" src="img/todas/barra.png">
+                    <p id="pExpPruebas">Experiencia</p>
+                </div>
+                
+            </div>
         </section>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
