--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -41,8 +41,23 @@
                     <img id="experienciaPruebas" src="img/pantallas/pruebas/imagenes/experiencia.png">
                     <img id="barraExpPruebas" src="img/todas/barra.png">
                     <p id="pExpPruebas">Experiencia</p>
+                </div>                
+            </div>
+            <div id="checkListPruebas" class="checklist animated fadeInLeftBig" >                      
+            </div>
+            <div id="checkListDesafios" class="checklist ocultar">                      
+            </div>
+            <div id="checkListEspecialidades" class="checklist ocultar">                      
+            </div>
+            <div id="footer">
+                <img id="pruebasFooter" src="img/pantallas/pruebas/imagenes/pruebas.png">
+                <p id="txtPruebas">Pruebas</p>
+                <div id="footer2">
+                    <img id="desFooter" src="img/pantallas/pruebas/imagenes/desafios.png">
+                    <p id="txtDes">Desafios</p>
+                    <img id="espFooter" src="img/pantallas/pruebas/imagenes/especialidades.png">
+                    <p id="txtEsp">Especialidades</p>
                 </div>
-                
             </div>
         </section>
         <script type="text/javascript" src="cordova.js"></script>
