--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -13,10 +13,9 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga  ocultar" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
-            <div class="loader"></div>         
-                      
+            <div class="loader"></div>
         </section>
         <section id="Secbienvenidos" class="Secbienvenidos ocultar" >                     
         </section>
@@ -24,7 +23,7 @@
         </section>
         <section id="SecEnfoque" class="SecEnfoque ocultar">            
         </section>
-        <section id="SecPruebas" class="SecPruebas animated fadeInLeftBig"> 
+        <section id="SecPruebas" class="SecPruebas  ocultar"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
@@ -36,10 +35,10 @@
                     <img id="usuarioPruebas" src="img/pantallas/pruebas/imagenes/ella_azul.png">
                     <p id="nivelPruebas">Nivel 1</p>
                     <img id="saludPruebas" src="img/pantallas/pruebas/imagenes/salud.png">
-                    <img id="barraSaludPruebas" src="img/todas/barra.png">
+                    <img id="barraSaludPruebas" src="img/Todas/barra.png">
                     <p id="pSaludPruebas">Salud</p>
                     <img id="experienciaPruebas" src="img/pantallas/pruebas/imagenes/experiencia.png">
-                    <img id="barraExpPruebas" src="img/todas/barra.png">
+                    <img id="barraExpPruebas" src="img/Todas/barra.png">
                     <p id="pExpPruebas">Experiencia</p>
                 </div>                
             </div>
