--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -45,12 +45,12 @@
             <div id="checkListPruebas" class="checklist animated fadeInLeftBig" >                      
                 <p id="tituloPrueba">Pruebas de investidura</p>
                 <ul id="myUL">
-                    <li id="1">Participa satisfactoriamene en por lo menos seis (6) reuniones de Equipo y Sociedad</li>
-                    <li id="2">Aprende y explica la Ley y la promesa del pionero</li>
-                    <li id="3">Explica el significado del Lema del Pionero</li>
-                    <li id="4">Practica y explica la Divisa del Pionero</li>
-                    <li id="5">Recita la Oración del Pionero y explica su significado</li>
-                    <li id="6">Conoce y explica los Fines, Principios y Virtudes Movimiento Scout</li>
+                    <li id="1"><span>satisfactoriamene en por lo menos seis (6) reuniones de Equipo y Sociedad</span> </li>
+                    <li id="2"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                    <li id="3"><span>Explica el significado del Lema del Pionero</span> </li>
+                    <li id="4"><span>Practica y explica la Divisa del Pionero</span></li>
+                    <li id="5"><span>Recita la Oración del Pionero y explica su significado</span></li>
+                    <li id="6"><span>Conoce y explica los Fines, Principios y Virtudes Movimiento Scout</span></li>
                 </ul>
             </div>
             <div id="checkListDesafios" class="checklist ocultar">                      
