Correcciones hechas en clase

--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -116,12 +116,7 @@
             </div>
         </section>
 
-        <style>
-                .Secbienvenidos{
-                        background-image: url("img/Todas/fondo_pantalla_bienvenido.png");
-                } 
-                         
-        </style>
+        
 
 
         <script type="text/javascript" src="cordova.js"></script>
