--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -74,8 +74,8 @@
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
-                    <img id="menuPruebas" src="img/pantallas/pruebas/imagenes/menu.png">
-                    Sofía Álvarez
+                    <img id="volverPruebasPuntos" src="img/pantallas/pruebas/imagenes/menu.png">
+                    <p id="nombrePruebas">Sofía Álvarez</p>
                     <img id="opcionesPruebas" src="img/pantallas/pruebas/imagenes/opciones.png">
                 </div>
                 <div id="bodyInfoUsuario">
