--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -91,7 +91,7 @@
             </div>
             <div id="checkListPruebas" class="checklist animated fadeInLeftBig" >                      
                 <p id="tituloPrueba">Pruebas de investidura</p>
-                <ul id="pruebas">
+                <ul id="Prueba" class="Prueba">
                     <li id="1" class="pruebasItem"><span >Participa satisfactoriamene en por lo menos seis (6) reuniones de Equipo y Sociedad</span> </li>
                     <li id="2" class="pruebasItem"><span >Aprende y explica la Ley y la promesa del pionero</span></li>
                     <li id="3" class="pruebasItem"><span >Explica el significado del Lema del Pionero</span> </li>
@@ -103,7 +103,7 @@
             <div id="checkListDesafios" class="checklist ocultar"> 
                 <div id="DesMenu" class="animated fadeInRightBig">  
                     <p id="tituloMenDes">Elige un desafío de acción</p> 
-                    <div class="desAccion" id="DesSalir" onclick="ClickDesSalirCheck()">
+                    <div class="desAccion" id="DesSalirInfo" onclick="ClickDesSalirCheck()">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Caracter y afectividad</p>
@@ -140,20 +140,19 @@
                     </div>
                 </div>
                 <div id="DesSalirCheck" class="checklist ocultar">
-                    <div class="desAccion" id="DesSalir" onclick="ClickDesSalirCheck()">
+                    <div class="desAccion" id="DesSalirHead">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Caracter y afectividad</p>
                         <p id="FinDes" class="descripDes">Fin: Formación del caracter</p>
                     </div>
                     <p id="tituloDesCheck">Pruebas del desafío</p>
-                    <ul id="desafios">
-                        <!-- <li id="1"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
-                        <li id="2"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
-                        <li id="3"><span>Explica el significado del Lema del Pionero</span> </li>
-                        <li id="4"><span>Practica y explica la Divisa del Pionero</span></li>
-                        <li id="5"><span>Recita la Oración del Pionero y explica su significado</span></li>
-                        <li id="6"><span>Conoce y explica los Fines, Principios y Virtudes Movimiento Scout</span></li> -->
+                    <ul id="desSalir" class="desSalir">
+                        <li id="7" class="desSalirItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
+                        <li id="8" class="desSalirItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                        <li id="9" class="desSalirItem"><span>Explica el significado del Lema del Pionero</span> </li>
+                        <li id="A" class="desSalirItem"><span>Practica y explica la Divisa del Pionero</span></li>
+                        
                     </ul>
                 </div>
             </div>
