--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig ocultar" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>
         </section>
@@ -70,7 +70,7 @@
                 </section>    
                 <p id="eligeText">Pantalla Enfoque</p>        
         </section>
-        <section id="SecPruebas" class="SecPruebas  animated fadeInUpBig"> 
+        <section id="SecPruebas" class="SecPruebas  ocultar"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
@@ -175,7 +175,7 @@
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <!-- <script type="text/javascript" src="js/pantallasIniciales.js"></script> -->
+        <script type="text/javascript" src="js/pantallasIniciales.js"></script>
         <script type="text/javascript" src="js/desafiosAccion.js"></script>
 
     </body>
