--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig ocultar" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>
         </section>
@@ -70,7 +70,7 @@
                 </section>    
                 <p id="eligeText">Pantalla Enfoque</p>        
         </section>
-        <section id="SecPruebas" class="SecPruebas  animated fadeInUpBig"> 
+        <section id="SecPruebas" class="SecPruebas  ocultar"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div id="DesSalirCheck" class="checklist ocultar">
-                    <div class="desAccion">
+                    <div class="desAccion" id="DesSalirHead">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Caracter y afectividad</p>
@@ -175,7 +175,7 @@
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <!-- <script type="text/javascript" src="js/pantallasIniciales.js"></script> -->
+        <script type="text/javascript" src="js/pantallasIniciales.js"></script>
         <script type="text/javascript" src="js/desafiosAccion.js"></script>
 
     </body>
