--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig ocultar" > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>
         </section>
@@ -70,7 +70,7 @@
                 </section>    
                 <p id="eligeText">Pantalla Enfoque</p>        
         </section>
-        <section id="SecPruebas" class="SecPruebas  ocultar"> 
+        <section id="SecPruebas" class="SecPruebas  animated fadeInUpBig"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
@@ -103,35 +103,35 @@
             <div id="checkListDesafios" class="checklist ocultar"> 
                 <div id="DesMenu" class="animated fadeInRightBig">  
                     <p id="tituloMenDes">Elige un desafío de acción</p> 
-                    <div class="desAccion" id="DesSalirInfo" onclick="ClickDesSalirCheck()">
+                    <div class="desAccion" id="DesSalirInfo" onclick="ClickDesCheck(DesSalirInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Caracter y afectividad</p>
                         <p id="FinDes" class="descripDes">Fin: Formación del caracter</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesVivir">
+                    <div class="desAccion" id="DesVivirInfo" onclick="ClickDesCheck(DesVivirInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/vivir.png">
                         <p id="tituloDes">Vivir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Corporalidad</p>
                         <p id="FinDes" class="descripDes">Fin: Desarrollo de cuerpo y mente sanos</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesDar">
+                    <div class="desAccion" id="DesDarInfo" onclick="ClickDesCheck(DesDarInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/dar.png">
                         <p id="tituloDes">Dar</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Sociabilidad</p>
                         <p id="FinDes" class="descripDes">Fin: Hacerse útil para servir a los demás</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesCrear">
+                    <div class="desAccion" id="DesCrearInfo" onclick="ClickDesCheck(DesCrearInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/crear.png">
                         <p id="tituloDes">Crear</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Creatividad</p>
                         <p id="FinDes" class="descripDes">Fin: Preparación para una carrera u oficio</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesBuscar">
+                    <div class="desAccion" id="DesBuscarInfo" onclick="ClickDesCheck(DesBuscarInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/buscar.png">
                         <p id="tituloDes">Buscar</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Esperitualidad</p>
@@ -139,7 +139,8 @@
                         <p id="avanceDes">0%</p>
                     </div>
                 </div>
-                <div id="DesSalirCheck" class="checklist ocultar">
+
+                <div id="DesSalirInfoCheck" class="checklist ocultar">
                     <div class="desAccion" id="DesSalirHead">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
@@ -147,7 +148,7 @@
                         <p id="FinDes" class="descripDes">Fin: Formación del caracter</p>
                     </div>
                     <p id="tituloDesCheck">Pruebas del desafío</p>
-                    <ul id="desSalir" class="desSalir">
+                    <ul id="desSalir" class="desCheck">
                         <li id="7" class="desSalirItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
                         <li id="8" class="desSalirItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
                         <li id="9" class="desSalirItem"><span>Explica el significado del Lema del Pionero</span> </li>
@@ -155,6 +156,71 @@
                         
                     </ul>
                 </div>
+
+                <div id="DesVivirInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesVivirHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/vivir.png">
+                        <p id="tituloDes">Vivir</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Corporalidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Desarrollo de cuerpo y mente sanos</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desVivir" class="desCheck">
+                        <li id="B" class="desVivirItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
+                        <li id="C" class="desVivirItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                        <li id="D" class="desVivirItem"><span>Explica el significado del Lema del Pionero</span> </li>
+                        <li id="E" class="desVivirItem"><span>Practica y explica la Divisa del Pionero</span></li>
+                    </ul>
+                </div>
+
+                <div id="DesDarInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesDarHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/dar.png">
+                        <p id="tituloDes">Dar</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Sociabilidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Hacerse útil para servir a los demás</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desDar" class="desCheck">
+                        <li id="F" class="desDarItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
+                        <li id="G" class="desDarItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                        <li id="H" class="desDarItem"><span>Explica el significado del Lema del Pionero</span> </li>
+                        <li id="I" class="desDarItem"><span>Practica y explica la Divisa del Pionero</span></li>
+                    </ul>
+                </div>
+
+                <div id="DesCrearInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesCrearHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/crear.png">
+                        <p id="tituloDes">Crear</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Creatividad</p>
+                        <p id="FinDes" class="descripDes">Fin: Preparación para una carrera u oficio</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desCrear" class="desCheck">
+                        <li id="J" class="desCrearItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
+                        <li id="K" class="desCrearItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                        <li id="L" class="desCrearItem"><span>Explica el significado del Lema del Pionero</span> </li>
+                        <li id="M" class="desCrearItem"><span>Practica y explica la Divisa del Pionero</span></li>
+                    </ul>
+                </div>
+
+                <div id="DesBuscarInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesBuscarHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/buscar.png">
+                        <p id="tituloDes">Buscar</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Esperitualidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Acercarse más a Dios</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desBuscar" class="desCheck">
+                        <li id="N" class="desBuscarItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
+                        <li id="O" class="desBuscarItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
+                        <li id="P" class="desBuscarItem"><span>Explica el significado del Lema del Pionero</span> </li>
+                        <li id="Q" class="desBuscarItem"><span>Practica y explica la Divisa del Pionero</span></li>
+                    </ul>
+                </div>
+
             </div>
             <div id="checkListEspecialidades" class="checklist ocultar">                      
             </div>
@@ -175,7 +241,7 @@
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/pantallasIniciales.js"></script>
+        <!-- <script type="text/javascript" src="js/pantallasIniciales.js"></script> -->
         <script type="text/javascript" src="js/desafiosAccion.js"></script>
 
     </body>
