--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig" > 
+        <section id="Seccarga" class="Seccarga animated fadeInUpBig " > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>
         </section>
@@ -70,7 +70,7 @@
                 </section>    
                 <p id="eligeText">Pantalla Enfoque</p>        
         </section>
-        <section id="SecPruebas" class="SecPruebas  ocultar"> 
+        <section id="SecPruebas" class="SecPruebas  animated fadeInUpBig ocultar"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
@@ -103,35 +103,35 @@
             <div id="checkListDesafios" class="checklist ocultar"> 
                 <div id="DesMenu" class="animated fadeInRightBig">  
                     <p id="tituloMenDes">Elige un desafío de acción</p> 
-                    <div class="desAccion" id="DesSalirInfo" onclick="ClickDesSalirCheck()">
+                    <div class="desAccion" id="DesSalirInfo" onclick="ClickDesCheck(DesSalirInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Caracter y afectividad</p>
                         <p id="FinDes" class="descripDes">Fin: Formación del caracter</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesVivir">
+                    <div class="desAccion" id="DesVivirInfo" onclick="ClickDesCheck(DesVivirInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/vivir.png">
                         <p id="tituloDes">Vivir</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Corporalidad</p>
                         <p id="FinDes" class="descripDes">Fin: Desarrollo de cuerpo y mente sanos</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesDar">
+                    <div class="desAccion" id="DesDarInfo" onclick="ClickDesCheck(DesDarInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/dar.png">
                         <p id="tituloDes">Dar</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Sociabilidad</p>
                         <p id="FinDes" class="descripDes">Fin: Hacerse útil para servir a los demás</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesCrear">
+                    <div class="desAccion" id="DesCrearInfo" onclick="ClickDesCheck(DesCrearInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/crear.png">
                         <p id="tituloDes">Crear</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Creatividad</p>
                         <p id="FinDes" class="descripDes">Fin: Preparación para una carrera u oficio</p>
                         <p id="avanceDes">0%</p>
                     </div>
-                    <div class="desAccion" id="DesBuscar">
+                    <div class="desAccion" id="DesBuscarInfo" onclick="ClickDesCheck(DesBuscarInfo)">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/buscar.png">
                         <p id="tituloDes">Buscar</p>
                         <p id="ModuloDes" class="descripDes">Módulo: Esperitualidad</p>
@@ -139,7 +139,8 @@
                         <p id="avanceDes">0%</p>
                     </div>
                 </div>
-                <div id="DesSalirCheck" class="checklist ocultar">
+
+                <div id="DesSalirInfoCheck" class="checklist ocultar">
                     <div class="desAccion" id="DesSalirHead">
                         <img id="imgDes"src="img/pantallas/desafios/imagenes/salir.png">
                         <p id="tituloDes">Salir</p>
@@ -147,7 +148,7 @@
                         <p id="FinDes" class="descripDes">Fin: Formación del caracter</p>
                     </div>
                     <p id="tituloDesCheck">Pruebas del desafío</p>
-                    <ul id="desSalir" class="desSalir">
+                    <ul id="desSalir" class="desCheck">
                         <li id="7" class="desSalirItem"><span>Disfruta en compañía de tu Equipo o tu Familia una película (o 1 libro) con contenido de valores para luego debatirla</span> </li>
                         <li id="8" class="desSalirItem"><span>Aprende y explica la Ley y la promesa del pionero</span></li>
                         <li id="9" class="desSalirItem"><span>Explica el significado del Lema del Pionero</span> </li>
@@ -155,6 +156,72 @@
                         
                     </ul>
                 </div>
+
+                <div id="DesVivirInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesVivirHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/vivir.png">
+                        <p id="tituloDes">Vivir</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Corporalidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Desarrollo de cuerpo y mente sanos</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desVivir" class="desCheck">
+                        <li id="B" class="desVivirItem"><span>Toma un curso de alta técnica Scout entre los siguientes: -Orden de Pionero Técnico</span> </li>
+                        <li id="C" class="desVivirItem"><span>Cocina 1 almuerzo ó 1 cena para concurso en campamento</span></li>
+                        <li id="D" class="desVivirItem"><span>Elabora un fichero de juegos y canciones Scouts</span> </li>
+                        
+                    </ul>
+                </div>
+
+                <div id="DesDarInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesDarHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/dar.png">
+                        <p id="tituloDes">Dar</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Sociabilidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Hacerse útil para servir a los demás</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desDar" class="desCheck">
+                        <li id="E" class="desDarItem"><span>Manten correspondencia con Scouts colombianos y de otros países a través de correo</span> </li>
+                        <li id="F" class="desDarItem"><span>Particpa y apoya una reunion de dos Unidades</span></li>
+                        <li id="G" class="desDarItem"><span>Visita los lugares más representativos de tu municipio</span> </li>
+                        <li id="H" class="desDarItem"><span>Divulga y resalta los aspectos más positivos de Colombia</span></li>
+                        <li id="I" class="desDarItem"><span>PROYECTO EXCURSIÓN: programa una excursión a un municipio</span></li>
+                    </ul>
+                </div>
+
+                <div id="DesCrearInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesCrearHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/crear.png">
+                        <p id="tituloDes">Crear</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Creatividad</p>
+                        <p id="FinDes" class="descripDes">Fin: Preparación para una carrera u oficio</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desCrear" class="desCheck">
+                        <li id="J" class="desCrearItem"><span>Demuestra que conoces las tecnologías del mundo moderno y aprovechalas para tu beneficio</span> </li>
+                        <li id="K" class="desCrearItem"><span>Visita y consulta en la biblioteca del municipio</span></li>
+                        <li id="L" class="desCrearItem"><span>Diseña y participa en dos representaciones para fogata</span> </li>
+                        <li id="M" class="desCrearItem"><span>PROYECTO ARTÍSTICO - CIENTÍFICO - TECNOLÓGICO</span></li>
+                    </ul>
+                </div>
+
+                <div id="DesBuscarInfoCheck" class="checklist ocultar">
+                    <div class="desAccion" id="DesBuscarHead">
+                        <img id="imgDes"src="img/pantallas/desafios/imagenes/buscar.png">
+                        <p id="tituloDes">Buscar</p>
+                        <p id="ModuloDes" class="descripDes">Módulo: Esperitualidad</p>
+                        <p id="FinDes" class="descripDes">Fin: Acercarse más a Dios</p>
+                    </div>
+                    <p id="tituloDesCheck">Pruebas del desafío</p>
+                    <ul id="desBuscar" class="desCheck">
+                        <li id="N" class="desBuscarItem"><span>PROYECTO ECOLÓGICO - DESARROLLA LA INSIGNIA DE LA CONSERVACIÓN MUNDIAL CSA</span> </li>
+                        <li id="O" class="desBuscarItem"><span>Visita un jardín botánico o reserva ecológica</span></li>
+                        <li id="P" class="desBuscarItem"><span>Participa en una actividad esperitual del Grupo Scout</span> </li>
+                        <li id="Q" class="desBuscarItem"><span>Conoce y relata a un aspirante la historia de San Ignacio de Loyola</span></li>
+                    </ul>
+                </div>
+
             </div>
             <div id="checkListEspecialidades" class="checklist ocultar">                      
             </div>
