--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <section id="Seccarga" class="Seccarga animated fadeInUpBig " > 
+        <section id="Seccarga" class="Seccarga animated fadeInRightBig " > 
             <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png"> 
             <div class="loader"></div>
         </section>
@@ -70,7 +70,7 @@
                 </section>    
                 <p id="eligeText">Pantalla Enfoque</p>        
         </section>
-        <section id="SecPruebas" class="SecPruebas  animated fadeInUpBig ocultar"> 
+        <section id="SecPruebas" class="SecPruebas  animated fadeInRightBig ocultar"> 
             <div id="infoUsuario">
                 <div id="headInfoUsuario">
                     <img id="volverPruebas" src="img/pantallas/pruebas/imagenes/volver.png">
