--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -90,7 +90,7 @@
                 </div>                
             </div>
             <div id="checkListPruebas" class="checklist animated fadeInLeftBig" >                      
-                <p id="tituloPrueba">Pruebas de investidura</p>
+                <p id="tituloPrueba">Pruebas de investidura</p><p id="avancePrueba">0%</p>
                 <ul id="Prueba" class="Prueba">
                     <li id="1" class="pruebasItem"><span >Participa satisfactoriamene en por lo menos seis (6) reuniones de Equipo y Sociedad</span> </li>
                     <li id="2" class="pruebasItem"><span >Aprende y explica la Ley y la promesa del pionero</span></li>
