--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -84,9 +84,11 @@
                     <img id="saludPruebas" src="img/pantallas/pruebas/imagenes/salud.png">
                     <img id="barraSaludPruebas" src="img/Todas/barra.png">
                     <p id="pSaludPruebas">Salud</p>
+                    <p id="procSaludPruebas">0%</p>
                     <img id="experienciaPruebas" src="img/pantallas/pruebas/imagenes/experiencia.png">
                     <img id="barraExpPruebas" src="img/Todas/barra.png">
                     <p id="pExpPruebas">Experiencia</p>
+                    <p id="procExpPruebas">0%</p>
                 </div>                
             </div>
             <div id="checkListPruebas" class="checklist animated fadeInLeftBig" >                      
@@ -186,7 +188,7 @@
                     <p id="tituloDesCheck">Pruebas del desafío</p>
                     <ul id="desDar" class="desCheck">
                         <li id="E" class="desDarItem"><span>Manten correspondencia con Scouts colombianos y de otros países a través de correo</span> </li>
-                        <li id="F" class="desDarItem"><span>Particpa y apoya una reunion de dos Unidades</span></li>
+                        <li id="F" class="desDarItem"><span>Participa y apoya una reunion de dos Unidades</span></li>
                         <li id="G" class="desDarItem"><span>Visita los lugares más representativos de tu municipio</span> </li>
                         <li id="H" class="desDarItem"><span>Divulga y resalta los aspectos más positivos de Colombia</span></li>
                         <li id="I" class="desDarItem"><span>PROYECTO EXCURSIÓN: programa una excursión a un municipio</span></li>
