--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -93,7 +93,7 @@
             <p id="eligeText">Elige tu unidad</p>
             <img id="imgTropa" src="img/Todas/tropa.png">
             <p id="tropaText">Tropa</p>
-            <img id="imgSociedad" src="img/Todas/Sociedad.png" onclick="clickEnSiguienteUnidad()">
+            <img id="imgSociedad" src="img/Todas/sociedad.png" onclick="clickEnSiguienteUnidad()">
             <p id="sociedadText">Sociedad</p>
             <img id="imgClan" src="img/Todas/clan.png">
             <p id="clanText">Clan</p>
