Correcciones en fuentes
Correcciones fuentes e imagenes

--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -29,7 +29,7 @@
                     tado hasta la fecha.
                 </p>
                 <img id="flechaDialogo" src="img/Todas/flecha_dialogo.png" onclick="siguienteTextoAna()">
-            </div>
+            
             <p id="AnaText2" class="ocultar">
                 La flecha en la parte inferior es para especificar en </br>
                 que momento ganaste tu uniforme o el adelanto. </br>
@@ -93,7 +93,7 @@
             <p id="eligeText">Elige tu unidad</p>
             <img id="imgTropa" src="img/Todas/tropa.png">
             <p id="tropaText">Tropa</p>
-            <img id="imgSociedad" src="img/Todas/Sociedad.png" onclick="clickEnSiguienteUnidad()">
+            <img id="imgSociedad" src="img/Todas/SociedadN.png" onclick="clickEnSiguienteUnidad()">
             <p id="sociedadText">Sociedad</p>
             <img id="imgClan" src="img/Todas/clan.png">
             <p id="clanText">Clan</p>
