--- a/beprepared/platforms/android/app/src/main/assets/www/index.html
+++ b/beprepared/platforms/android/app/src/main/assets/www/index.html
@@ -41,9 +41,22 @@
             </div>
         </section>
         <section id="Seccarga" class="Seccarga animated fadeInUpBig">
+        </section>
+        <section id="SecInstrucciones" class="ocultar">
+            <p id="tituloInstrucciones">Bienvenido a</p>
+            <img id="logoInstrucciones" src="img/pantallas/introduccion/imagenes/logo_introduccion.png">
+            <p id="esHora">Es hora de divertirse mientras haces cosas</p>
+            <img id="correrInstrucciones" src="img/pantallas/introduccion/imagenes/_ana_progreso.png">
+            <p id="txtProgresa">!Progresa en el juego,
+                <br>Progresa en los scouts¡</p>
+            <img id="hojasIzquierdo" src="img/pantallas/introduccion/imagenes/planta_izquierda_verde.png">
+            <div id="divDesbloquea">
+                <p id="desbloquea">Desbloquea elementos del juego<br>en la medida que cumples con tus<br> pruebas del plan de adelanto. Con-<br> sigue tu uniforme y nuevas insignias <br> cumpliendo tus logros.
+                </p>
+            </div>
+            <img id="hojasDerecho" src="img/pantallas/introduccion/imagenes/planta_derecha_verde.png">
+            <img id="sgteInstrucciones" src="img/pantallas/introduccion/imagenes/siguiente.png" onclick="clicksgteBienvenidos()">
 
-            <img id="logoCarga" src="img/Todas/imagen_scout_pantalla_bienvenido.png">
-            <div class="loader"></div>
         </section>
         <section id="Secbienvenidos" class="Secbienvenidos ocultar">
 
@@ -93,7 +106,7 @@
             <p id="eligeText">Elige tu unidad</p>
             <img id="imgTropa" src="img/Todas/tropa.png">
             <p id="tropaText">Tropa</p>
-            <img id="imgSociedad" src="img/Todas/SociedadN.png" onclick="clickEnSiguienteUnidad()">
+            <img id="imgSociedad" src="img/pantallas/unidad/imagenes/Sociedad_color.png" onclick="clickEnSiguienteUnidad()">
             <p id="sociedadText">Sociedad</p>
             <img id="imgClan" src="img/Todas/clan.png">
             <p id="clanText">Clan</p>
