--- a/beprepared/www/index.html
+++ b/beprepared/www/index.html
@@ -196,6 +196,11 @@
                     <li id="6" class="pruebasItem"><span>Conoce y explica los Fines, Principios y Virtudes Movimiento
                             Scout</span></li>
                 </ul>
+                <img id="agregarCir" src="img/pantallas/pruebas/imagenes/nuevo.png" onclick="clickExpandir()">
+                <div id="Divagregar" class="Divagregar ocultar">
+                    <img id="agregaPrueba" src="img/pantallas/pruebas/imagenes/nueva_prueba_circulo.png">
+                    <img id="txtNuevaPrueba" src="img/pantallas/pruebas/imagenes/txtnuevaP.png">
+                </div>
             </div>
             <div id="checkListDesafios" class="checklist ocultar">
                 <div id="DesMenu" class="animated fadeInRightBig">
